--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^9.2.2"
+    "swiper": "^9.2.2",
+    "swr": "^2.1.4"
   },
   "devDependencies": {
     "prettier": "2.8.7"
